# transcribers

./: Cargo.toml  config.example.toml  flake.nix
nix/: example-host-config.nix  module.nix
src/: config.rs  health.rs  main.rs  server.rs
src/stt/: audio.rs  mod.rs  routes.rs  whisper.rs
src/tts/: mod.rs  routes.rs
